--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first github repo</title>
+    <title>My first gitub</title>
 </head>
 <body>
-    
+    <div>
+        <p>
+            Akib Tanzim.
+        </p>
+    </div>
 </body>
 </html>
